--- a/package.json
+++ b/package.json
@@ -18,26 +18,30 @@
   "dependencies": {
     "@emotion/cache": "11.14.0",
     "@emotion/react": "11.14.0",
-    "@emotion/styled": "11.14.0",
-    "@mui/lab": "7.0.0-beta.10",
-    "@mui/material": "7.0.2",
-    "@mui/material-nextjs": "7.0.2",    
-    "axios": "1.8.4",
-    "framer-motion": "12.6.5",    
+    "@emotion/styled": "11.14.1",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/lab": "7.0.1-beta.19",
+    "@mui/material": "7.3.5",
+    "@mui/material-nextjs": "7.3.5",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.81.1",
+    "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.13.2",
+    "framer-motion": "12.23.24",
     "lodash-es": "4.17.21",
-    "next": "15.3.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",    
-    "react-hook-form": "7.55.0",    
-    "react-slick": "0.30.3",
+    "next": "^16.0.3",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-hook-form": "7.66.0",
+    "react-slick": "0.31.0",
     "slick-carousel": "1.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "9.24.0",
-    "eslint": "9.24.0",
-    "eslint-config-next": "15.3.0",
-    "eslint-config-prettier": "10.1.2",
-    "eslint-plugin-prettier": "5.2.6",    
-    "prettier": "3.5.3"
+    "@eslint/js": "9.39.1",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.3",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.4",
+    "prettier": "3.6.2"
   }
 }
